# unilime-test-task

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docker/: nginx.conf
extensions/: __init__.py  dependency_injection.py  error_handlers.py  logging.py  router.py
src/: __init__.py  config.py
src/clients/: browser.py  selenium_mail_client.py
src/clients/pages/: base_page.py  inbox_page.py
src/domain/: exceptions.py  models.py  ports.py
src/services/: __init__.py  mail_service.py
src/views/: email_controller.py
tests/unit/: test_browser_session.py  test_inbox_page.py  test_logging.py  test_mail_service.py  test_selenium_mail_client.py
