[project]
name = "unilime-test-task"
version = "0.1.0"
description = ""
authors = [
    {name = "Nazariy",email = "nazariytymchyshyn@gmail.com"}
]
requires-python = ">=3.14,<4.0"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "selenium (>=4.44.0,<5.0.0)",
    "kink (>=0.9.0,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.pyright]
include = ["src", "extensions", "main.py"]

[dependency-groups]
dev = [
    "ruff (>=0.15.15,<0.16.0)",
    "pyright (>=1.1.410,<2.0.0)",
    "pytest (>=9.0.3,<10.0.0)"
]
